syntax = "proto3";

package api.shop.v1;

option go_package = "shop/v1;shop";

import "google/protobuf/timestamp.proto";

service ShopService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
    rpc UpdateOrder (UpdateOrderRequest) returns (UpdateOrderResponse);
    rpc DeleteOrder (DeleteOrderRequest) returns (DeleteOrderResponse);
    rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
    rpc GetOrders (GetOrdersRequest) returns (GetOrdersResponse);

    rpc CreateItem (CreateItemRequest) returns (CreateItemResponse);
    rpc UpdateItem (UpdateItemRequest) returns (UpdateItemResponse);
    rpc DeleteItem (DeleteItemRequest) returns (DeleteItemResponse);
    rpc GetItem (GetItemRequest) returns (GetItemResponse);
}

message Item {
    int32 id = 1;
    string category = 2;
    string name = 3;
    string description = 4;
    uint32 count = 5;
    double amount = 6;
    bool avaibility = 7;
}

message Order {
    int32 id = 1;
    int32 user_id = 2;
    int32 item_id = 3;
    string status = 4;
    uint32 count = 5;
    double amount = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}


message CreateItemRequest {
    string category = 1;
    string name = 2;
    string description = 3;
    uint32 count = 4;
    double amount = 5;
    bool avaibility = 6;
}

message CreateOrderRequest {
    int32 item_id = 1;
    string status = 2;
    uint32 count = 3;
    double amount = 4;
}

message UpdateItemRequest {
    string category = 1;
    string name = 2;
    string description = 3;
    uint32 count = 4;
    double amount = 5;
    bool avaibility = 6;
}

message UpdateOrderRequest {  
    int32 item_id = 1;
    string status = 2;
    uint32 count = 3;
    double amount = 4;
}

message DeleteItemRequest {
    int32 id = 1;
}

message DeleteOrderRequest {
    int32 order_id = 1;
}

message GetItemRequest {
    int32 id = 1;
}

message GetOrderRequest {
    int32 order_id = 1;
}

message GetOrdersRequest {
    google.protobuf.Timestamp start = 1;
    google.protobuf.Timestamp end = 2;
}

message CreateItemResponse {
    Item item = 1;
}

message CreateOrderResponse {
    Order order = 1;
}

message UpdateItemResponse {
    Item item = 1;
}

message UpdateOrderResponse {
    Order order = 1;
}

message DeleteItemResponse {
    string status = 1;
}

message DeleteOrderResponse {
    string status = 1;
}

message GetItemResponse {
    Item item = 1;
}

message GetOrderResponse {
    Order order = 1;
}

message GetOrdersResponse {
    repeated Order orders = 1;
    double total_amount = 2;
}