syntax = "proto3";

package api.user.v1;

option go_package = "user/v1;user";

service UserService {
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
    rpc SignIn(SignInRequest) returns (SignInResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

message User {
    string username = 1;
    string password = 2;
    string email = 3;
    string mobile = 4;
}

message SignUpRequest {
    User user = 1;
}

message SignInRequest {
    string email = 1;
    string password = 2;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message SignInResponse {
    string jwt = 1;
    string refresh_token = 2;
}

message SignUpResponse {
    User user = 1;
}

message RefreshTokenResponse {
    string jwt = 1;
    string refresh_token = 2;
}

